<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="media">Медиатека</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="share_ink">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_e_mail">metelikov@yandex.ru</string>
    <string name="massage_subject">«Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="message_text">«Спасибо разработчикам и разработчицам за крутое приложение!»</string>
    <string name="web_page_links">https://yandex.ru/legal/practicum_offer/</string>

</resources>