<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical">


    <TextView
        android:id="@+id/app_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_padding"
        android:layout_marginTop="@dimen/main_top_bottom"
        android:layout_marginEnd="@dimen/main_padding"
        android:layout_marginBottom="@dimen/main_textView_bottom"
        android:text="@string/app_name"
        android:textColor="@color/button"
        android:textSize="@dimen/main_text_size"
        />


    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_search"
        android:text="@string/search"
        app:icon="@drawable/search"
        />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_media"
        android:text="@string/media"
        app:icon="@drawable/library"

         />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_settings"
        android:layout_marginBottom="@dimen/main_Bottom"
        android:text="@string/settings"
        app:icon="@drawable/settings"
        />
    />

</LinearLayout>